feat: adding titles in slider.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Sensive Blog - Home</title>
+  <title>Celebrando a vida - Home</title>
   <link rel="icon" href="img/Fevicon.png" type="image/png">
 
   <link rel="stylesheet" href="vendors/bootstrap/bootstrap.min.css">
@@ -68,7 +68,7 @@
           <div class="hero-banner__content">
             <h3>Tours & Travels</h3>
             <h1>Amazing Places on earth</h1>
-            <h4>December 12, 2018</h4>
+            <h4>- datetime.now -</h4> <!-- TODO: adicionar js para contar data-->
           </div>
         </div>
       </div>
@@ -84,9 +84,9 @@
               <img class="card-img rounded-0" src="img/blog/blog-slider/blog-slide1.png" alt="">
             </div>
             <div class="blog__slide__content">
-              <a class="blog__slide__label" href="#">Fashion</a>
-              <h3><a href="#">New york fashion week's continued the evolution</a></h3>
-              <p>2 days ago</p>
+              <a class="blog__slide__label" href="#">Small Towns</a>
+              <h3><a href="#">Vale do Paraíba - Brazil: São José dos Campos</a></h3>
+              <p>[2 days ago]</p><!-- TODO: adicionar js para contar data-->
             </div>
           </div>
           <div class="card blog__slide text-center">
@@ -94,8 +94,8 @@
               <img class="card-img rounded-0" src="img/blog/blog-slider/blog-slide2.png" alt="">
             </div>
             <div class="blog__slide__content">
-              <a class="blog__slide__label" href="#">Fashion</a>
-              <h3><a href="#">New york fashion week's continued the evolution</a></h3>
+              <a class="blog__slide__label" href="#">Small Towns</a>
+              <h3><a href="#">Vale do Paraíba - Brazil: Guararema</a></h3>
               <p>2 days ago</p>
             </div>
           </div>
@@ -104,8 +104,8 @@
               <img class="card-img rounded-0" src="img/blog/blog-slider/blog-slide3.png" alt="">
             </div>
             <div class="blog__slide__content">
-              <a class="blog__slide__label" href="#">Fashion</a>
-              <h3><a href="#">New york fashion week's continued the evolution</a></h3>
+              <a class="blog__slide__label" href="#">Small Towns</a>
+              <h3><a href="#">Vale do Paraíba - Brazil: Caçapava</a></h3>
               <p>2 days ago</p>
             </div>
           </div>
@@ -114,8 +114,8 @@
               <img class="card-img rounded-0" src="img/blog/blog-slider/blog-slide1.png" alt="">
             </div>
             <div class="blog__slide__content">
-              <a class="blog__slide__label" href="#">Fashion</a>
-              <h3><a href="#">New york fashion week's continued the evolution</a></h3>
+              <a class="blog__slide__label" href="#">Beach Towns</a>
+              <h3><a href="#">Litoral Norte - Brazil: Caraguatatuba</a></h3>
               <p>2 days ago</p>
             </div>
           </div>
@@ -124,8 +124,8 @@
               <img class="card-img rounded-0" src="img/blog/blog-slider/blog-slide2.png" alt="">
             </div>
             <div class="blog__slide__content">
-              <a class="blog__slide__label" href="#">Fashion</a>
-              <h3><a href="#">New york fashion week's continued the evolution</a></h3>
+              <a class="blog__slide__label" href="#">Beach Towns</a>
+              <h3><a href="#">Litoral Norte - Brazil: Ubatuba</a></h3>
               <p>2 days ago</p>
             </div>
           </div>
@@ -134,8 +134,8 @@
               <img class="card-img rounded-0" src="img/blog/blog-slider/blog-slide3.png" alt="">
             </div>
             <div class="blog__slide__content">
-              <a class="blog__slide__label" href="#">Fashion</a>
-              <h3><a href="#">New york fashion week's continued the evolution</a></h3>
+              <a class="blog__slide__label" href="#">Beach Towns</a>
+              <h3><a href="#">Litoral Norte - Brazil: Ilhabela</a></h3>
               <p>2 days ago</p>
             </div>
           </div>
