feat: adding compiled css

--- a/contact.html
+++ b/contact.html
@@ -102,8 +102,8 @@
             });
           }
           
-        </script>
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDpfS1oRGreGSBU5HHjMmQ3o5NLw7VdJ6I&callback=initMap"></script>
+        </script><!-- TODO add variable here-->
+        <script src="https://maps.googleapis.com/maps/api/js?key=[addvariablehere]&callback=initMap"></script>
         
       </div>
 
