fix: corrige erros gramaticais e melhora consistência do conteúdo

--- a/archive.html
+++ b/archive.html
@@ -427,32 +427,16 @@
               </div>
 
                 <div class="single-sidebar-widget tag_cloud_widget">
-                  <h4 class="single-sidebar-widget__title">Popular Post</h4>
+                  <h4 class="single-sidebar-widget__title">Popular Tags</h4>
                   <ul class="list">
-                    <li>
-                        <a href="#">project</a>
-                    </li>
-                    <li>
-                        <a href="#">love</a>
-                    </li>
-                    <li>
-                        <a href="#">technology</a>
-                    </li>
-                    <li>
-                        <a href="#">travel</a>
-                    </li>
-                    <li>
-                        <a href="#">software</a>
-                    </li>
-                    <li>
-                        <a href="#">life style</a>
-                    </li>
-                    <li>
-                        <a href="#">design</a>
-                    </li>
-                    <li>
-                        <a href="#">illustration</a>
-                    </li>
+                    <li><a href="#">travel</a></li>
+                    <li><a href="#">spirituality</a></li>
+                    <li><a href="#">culture</a></li>
+                    <li><a href="#">photography</a></li>
+                    <li><a href="#">adventure</a></li>
+                    <li><a href="#">lifestyle</a></li>
+                    <li><a href="#">nature</a></li>
+                    <li><a href="#">faith</a></li>
                   </ul>
                 </div>
               </div>
@@ -507,7 +491,7 @@
         </div>
         <div class="col-lg-3  col-md-6 col-sm-6">
           <div class="single-footer-widget mail-chimp">
-            <h6 class="mb-20">Instragram Feed</h6>
+            <h6 class="mb-20">Instagram Feed</h6>
             <ul class="instafeed d-flex flex-wrap">
               <li><img src="img/instagram/i1.jpg" alt=""></li>
               <li><img src="img/instagram/i2.jpg" alt=""></li>
