--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
         <div class="hero-banner">
           <div class="hero-banner__content">
             <h3>Tours & Travels</h3>
-            <h1>Amazing Places on earth</h1>
-            <h4>- datetime.now -</h4> <!-- TODO: adicionar js para contar data-->
+            <h1>Amazing Places on Earth</h1>
+            <h4 id="current-date">Loading date...</h4>
           </div>
         </div>
       </div>
@@ -86,7 +86,7 @@
             <div class="blog__slide__content">
               <a class="blog__slide__label" href="#">Small Towns</a>
               <h3><a href="#">Vale do Paraíba - Brazil: São José dos Campos</a></h3>
-              <p>[2 days ago]</p><!-- TODO: adicionar js para contar data-->
+              <p id="post-date">2 days ago</p>
             </div>
           </div>
           <div class="card blog__slide text-center">
@@ -206,11 +206,9 @@
               </div>
               <div class="details mt-20">
                 <a href="blog-single.html">
-                  <h3>Tourist deaths in Costa Rica jeopardize safe dest
-                    ination reputation all time. </h3>
+                  <h3>Tourist deaths in Costa Rica jeopardize safe destination reputation</h3>
                 </a>
-                <p class="tag-list-inline">Tag: <a href="#">travel</a>, <a href="#">life style</a>, <a
-                    href="#">technology</a>, <a href="#">fashion</a></p>
+                <p class="tag-list-inline">Tag: <a href="#">travel</a>, <a href="#">lifestyle</a>, <a href="#">spirituality</a>, <a href="#">culture</a></p>
                 <p>Over yielding doesn't so moved green saw meat hath fish he him from given yielding lesser cattle were
                   fruitful lights. Given let have, lesser their made him above gathered dominion sixth. Creeping deep
                   said can't called second. Air created seed heaven sixth created living</p>
@@ -229,11 +227,9 @@
               </div>
               <div class="details mt-20">
                 <a href="blog-single.html">
-                  <h3>Tourist deaths in Costa Rica jeopardize safe dest
-                    ination reputation all time. </h3>
+                  <h3>Tourist deaths in Costa Rica jeopardize safe destination reputation</h3>
                 </a>
-                <p class="tag-list-inline">Tag: <a href="#">travel</a>, <a href="#">life style</a>, <a
-                    href="#">technology</a>, <a href="#">fashion</a></p>
+                <p class="tag-list-inline">Tag: <a href="#">travel</a>, <a href="#">lifestyle</a>, <a href="#">spirituality</a>, <a href="#">culture</a></p>
                 <p>Over yielding doesn't so moved green saw meat hath fish he him from given yielding lesser cattle were
                   fruitful lights. Given let have, lesser their made him above gathered dominion sixth. Creeping deep
                   said can't called second. Air created seed heaven sixth created living</p>
@@ -333,7 +329,7 @@
                     </div>
                     <div class="details mt-20">
                       <a href="blog-single.html">
-                        <h6>Accused of assaulting flight attendant miktake alaways</h6>
+                        <h6>Accused of assaulting flight attendant mistake always</h6>
                       </a>
                     </div>
                   </div>
