--- a/blog-details.html
+++ b/blog-details.html
@@ -287,7 +287,7 @@
 
 
               <div class="single-sidebar-widget post-category-widget">
-                <h4 class="single-sidebar-widget__title">Catgory</h4>
+                <h4 class="single-sidebar-widget__title">Category</h4>
                 <ul class="cat-list mt-20">
                   <li>
                     <a href="#" class="d-flex justify-content-between">
