feat: adicionar um index completo

--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Celebrando a vida - Home - Teste </title>
+  <title>Celebrando a vida - Home </title>
   <link rel="icon" href="img/Fevicon.png" type="image/png">
 
   <link rel="stylesheet" href="vendors/bootstrap/bootstrap.min.css">
@@ -36,22 +36,21 @@
           <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
             <ul class="nav navbar-nav menu_nav justify-content-center">
               <li class="nav-item active"><a class="nav-link" href="index.html">Home</a></li>
-              <li class="nav-item"><a class="nav-link" href="archive.html">Archive</a></li>
-              <li class="nav-item"><a class="nav-link" href="category.html">Category</a>
+              <li class="nav-item"><a class="nav-link" href="archive.html">Arquivos</a></li>
+              <li class="nav-item"><a class="nav-link" href="category.html">Categorias</a>
               <li class="nav-item submenu dropdown">
                 <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                  aria-expanded="false">Pages</a>
+                  aria-expanded="false">Páginas</a>
                 <ul class="dropdown-menu">
-                  <li class="nav-item"><a class="nav-link" href="blog-details.html">Blog Details</a></li>
+                  <li class="nav-item"><a class="nav-link" href="blog-details.html">Detalhes</a></li>
                 </ul>
               </li>
-              <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+              <li class="nav-item"><a class="nav-link" href="contact.html">Contato</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right navbar-social">
               <li><a href="#"><i class="ti-facebook"></i></a></li>
               <li><a href="#"><i class="ti-twitter-alt"></i></a></li>
               <li><a href="#"><i class="ti-instagram"></i></a></li>
-              <li><a href="#"><i class="ti-skype"></i></a></li>
             </ul>
           </div>
         </div>
@@ -66,9 +65,9 @@
       <div class="container">
         <div class="hero-banner">
           <div class="hero-banner__content">
-            <h3>Tours & Travels</h3>
-            <h1>Amazing Places on earth</h1>
-            <h4>- datetime.now -</h4> <!-- TODO: adicionar js para contar data-->
+            <h3>Viagens e Passeios</h3>
+            <h1>Lugares mais maravilhosos dessa terra</h1>
+            <h4>- . -</h4> <!-- TODO: adicionar js para contar data-->
           </div>
         </div>
       </div>
@@ -84,9 +83,9 @@
               <img class="card-img rounded-0" src="img/blog/blog-slider/blog-slide1.png" alt="">
             </div>
             <div class="blog__slide__content">
-              <a class="blog__slide__label" href="#">Small Towns</a>
-              <h3><a href="#">Vale do Paraíba - Brazil: São José dos Campos</a></h3>
-              <p>[2 days ago]</p><!-- TODO: adicionar js para contar data-->
+              <a class="blog__slide__label" href="#">Cidades Pequenas</a>
+              <h3><a href="#">Vale do Paraíba - Brasil: São José dos Campos</a></h3>
+              <p>.</p><!-- TODO: adicionar js para contar data-->
             </div>
           </div>
           <div class="card blog__slide text-center">
@@ -94,9 +93,9 @@
               <img class="card-img rounded-0" src="img/blog/blog-slider/blog-slide2.png" alt="">
             </div>
             <div class="blog__slide__content">
-              <a class="blog__slide__label" href="#">Small Towns</a>
-              <h3><a href="#">Vale do Paraíba - Brazil: Guararema</a></h3>
-              <p>2 days ago</p>
+              <a class="blog__slide__label" href="#">Cidades Pequenas</a>
+              <h3><a href="#">Vale do Paraíba - Brasil: Guararema</a></h3>
+              <p>.</p>
             </div>
           </div>
           <div class="card blog__slide text-center">
@@ -104,9 +103,9 @@
               <img class="card-img rounded-0" src="img/blog/blog-slider/blog-slide3.png" alt="">
             </div>
             <div class="blog__slide__content">
-              <a class="blog__slide__label" href="#">Small Towns</a>
-              <h3><a href="#">Vale do Paraíba - Brazil: Caçapava</a></h3>
-              <p>2 days ago</p>
+              <a class="blog__slide__label" href="#">Cidades Pequenas</a>
+              <h3><a href="#">Vale do Paraíba - Brasil: Caçapava</a></h3>
+              <p>.</p>
             </div>
           </div>
           <div class="card blog__slide text-center">
@@ -114,9 +113,9 @@
               <img class="card-img rounded-0" src="img/blog/blog-slider/blog-slide1.png" alt="">
             </div>
             <div class="blog__slide__content">
-              <a class="blog__slide__label" href="#">Beach Towns</a>
-              <h3><a href="#">Litoral Norte - Brazil: Caraguatatuba</a></h3>
-              <p>2 days ago</p>
+              <a class="blog__slide__label" href="#">Cidades Praianas</a>
+              <h3><a href="#">Litoral Norte - Brasil: Caraguatatuba</a></h3>
+              <p>.</p>
             </div>
           </div>
           <div class="card blog__slide text-center">
@@ -124,9 +123,9 @@
               <img class="card-img rounded-0" src="img/blog/blog-slider/blog-slide2.png" alt="">
             </div>
             <div class="blog__slide__content">
-              <a class="blog__slide__label" href="#">Beach Towns</a>
-              <h3><a href="#">Litoral Norte - Brazil: Ubatuba</a></h3>
-              <p>2 days ago</p>
+              <a class="blog__slide__label" href="#">Cidades Praianas</a>
+              <h3><a href="#">Litoral Norte - Brasil: Ubatuba</a></h3>
+              <p>.</p>
             </div>
           </div>
           <div class="card blog__slide text-center">
@@ -134,9 +133,9 @@
               <img class="card-img rounded-0" src="img/blog/blog-slider/blog-slide3.png" alt="">
             </div>
             <div class="blog__slide__content">
-              <a class="blog__slide__label" href="#">Beach Towns</a>
-              <h3><a href="#">Litoral Norte - Brazil: Ilhabela</a></h3>
-              <p>2 days ago</p>
+              <a class="blog__slide__label" href="#">Cidades Praianas</a>
+              <h3><a href="#">Litoral Norte - Brasil: Ilhabela</a></h3>
+              <p>.</p>
             </div>
           </div>
         </div>
@@ -153,22 +152,23 @@
               <div class="thumb">
                 <img class="img-fluid" src="img/blog/blog1.png" alt="">
                 <ul class="thumb-info">
-                  <li><a href="#"><i class="ti-user"></i>Admin</a></li>
-                  <li><a href="#"><i class="ti-notepad"></i>January 12,2019</a></li>
+                  <li><a href="#"><i class="ti-user"></i>Rodrigo Ramos</a></li>
+                  <li><a href="#"><i class="ti-notepad"></i>01/Jan/2019</a></li>
                   <li><a href="#"><i class="ti-themify-favicon"></i>2 Comments</a></li>
                 </ul>
               </div>
               <div class="details mt-20">
                 <a href="blog-single.html">
-                  <h3>Woman claims husband wants to name baby girl
-                    after his ex-lover sparking.</h3>
+                  <h3>Mulher afirma que marido correu como se não houvesse amanhã</h3>
                 </a>
                 <p class="tag-list-inline">Tag: <a href="#">travel</a>, <a href="#">life style</a>, <a
-                    href="#">technology</a>, <a href="#">fashion</a></p>
-                <p>Over yielding doesn't so moved green saw meat hath fish he him from given yielding lesser cattle were
-                  fruitful lights. Given let have, lesser their made him above gathered dominion sixth. Creeping deep
-                  said can't called second. Air created seed heaven sixth created living</p>
-                <a class="button" href="#">Read More <i class="ti-arrow-right"></i></a>
+                    href="#">fit</a>, <a href="#">runner</a></p>
+                <p>
+                  Essa foi retirada do instagram. Um corredor amador, acabou se perdendo em uma pequena cidade francesa. 
+                  Aparentemente, pegou uma estrada de terra e aprendeu a correr mais que o Bolt. 
+                  Ouvir essa história, vale a pena.
+                </p>
+                <a class="button" href="#">Leia Mais <i class="ti-arrow-right"></i></a>
               </div>
             </div>
 
@@ -176,8 +176,8 @@
               <div class="thumb">
                 <img class="img-fluid" src="img/blog/blog2.png" alt="">
                 <ul class="thumb-info">
-                  <li><a href="#"><i class="ti-user"></i>Admin</a></li>
-                  <li><a href="#"><i class="ti-notepad"></i>January 12,2019</a></li>
+                  <li><a href="#"><i class="ti-user"></i>Rodrigo Ramos</a></li>
+                  <li><a href="#"><i class="ti-notepad"></i>20/Ago/2025</a></li>
                   <li><a href="#"><i class="ti-themify-favicon"></i>2 Comments</a></li>
                 </ul>
               </div>
@@ -285,7 +285,7 @@
 
 
               <div class="single-sidebar-widget post-category-widget">
-                <h4 class="single-sidebar-widget__title">Catgory</h4>
+                <h4 class="single-sidebar-widget__title">Categoria</h4>
                 <ul class="cat-list mt-20">
                   <li>
                     <a href="#" class="d-flex justify-content-between">
@@ -333,7 +333,7 @@
                     </div>
                     <div class="details mt-20">
                       <a href="blog-single.html">
-                        <h6>Accused of assaulting flight attendant miktake alaways</h6>
+                        <h6>Homem é acusado de invadir fazenda e ser assustar cachorros na França</h6>
                       </a>
                     </div>
                   </div>
@@ -341,14 +341,13 @@
                     <div class="thumb">
                       <img class="card-img rounded-0" src="img/blog/thumb/thumb2.png" alt="">
                       <ul class="thumb-info">
-                        <li><a href="#">Adam Colinge</a></li>
-                        <li><a href="#">Dec 15</a></li>
+                        <li><a href="#">Rodrigo Ramos</a></li>
+                        <li><a href="#">20/Ago/2025</a></li>
                       </ul>
                     </div>
                     <div class="details mt-20">
                       <a href="blog-single.html">
-                        <h6>Tennessee outback steakhouse the
-                          worker diagnosed</h6>
+                        <h6>A pizza na França não é das melhores</h6>
                       </a>
                     </div>
                   </div>
@@ -356,14 +355,13 @@
                     <div class="thumb">
                       <img class="card-img rounded-0" src="img/blog/thumb/thumb3.png" alt="">
                       <ul class="thumb-info">
-                        <li><a href="#">Adam Colinge</a></li>
-                        <li><a href="#">Dec 15</a></li>
+                        <li><a href="#">Rodrigo Ramos</a></li>
+                        <li><a href="#">20/Ago/2025</a></li>
                       </ul>
                     </div>
                     <div class="details mt-20">
                       <a href="blog-single.html">
-                        <h6>Tennessee outback steakhouse the
-                          worker diagnosed</h6>
+                        <h6>Doces franceses que valem a pena.</h6>
                       </a>
                     </div>
                   </div>
@@ -414,11 +412,10 @@
       <div class="row">
         <div class="col-lg-3  col-md-6 col-sm-6">
           <div class="single-footer-widget">
-            <h6>About Us</h6>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
-              dolore
-              magna aliqua.
+            <h6>Sobre nós.</h6>
+            <p>A melhor coisa é poder viajar e se livrar do estresse desse mundo.
+
+            
             </p>
           </div>
         </div>
@@ -469,8 +466,8 @@
         </div>
         <div class="col-lg-2 col-md-6 col-sm-6">
           <div class="single-footer-widget">
-            <h6>Follow Us</h6>
-            <p>Let us be social</p>
+            <h6>Siga-nos os bons!</h6>
+            <p>Em todas as redes</p>
             <div class="footer-social d-flex align-items-center">
               <a href="#">
                 <i class="fab fa-facebook-f"></i>
